# ChangeLog for dev-cpp/libgtksourceviewmm
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.3 2007/01/21 17:38:03 remi Exp $

*libgtksourceviewmm-0.3.0 (21 Jan 2007)

  21 Jan 2007; Remi Cardona <remi@gentoo.org>
  +libgtksourceviewmm-0.3.0.ebuild:
  bumping libgtksourceviewmm to 0.3.0

  20 Dec 2006; Daniel Gryniewicz <dang@gentoo.org>
  libgtksourceviewmm-0.2.0.ebuild:
  Keyword ~amd64

*libgtksourceviewmm-0.2.0 (17 Dec 2006)

  17 Dec 2006; Remi <remi@gentoo.org> +metadata.xml,
  +libgtksourceviewmm-0.2.0.ebuild:
  adding libgtksourceviewmm-0.2.0 (see bug #153958)
