@@ -4,14 +4,18 @@ EBUILD libgtksourceviewmm-0.2.0.ebuild 895 RMD160 e2d0e19046819ea9c9f0cfe1f6cdae
 MD5 f1c1dd700971a86da2be3aae8bcb628f libgtksourceviewmm-0.2.0.ebuild 895
 RMD160 e2d0e19046819ea9c9f0cfe1f6cdae404e58b0f4 libgtksourceviewmm-0.2.0.ebuild 895
 SHA256 2132e6e22cc9e038402b66e90709a31c2b648dab39c2fd5206daeb101aba5360 libgtksourceviewmm-0.2.0.ebuild 895
+EBUILD libgtksourceviewmm-0.3.0-r1.ebuild 941 RMD160 55c30fc7f75ec9b6dd3e9e1639de446eb387cae1 SHA1 917ed010c27fbb9752ce503c8638bd7a238eb137 SHA256 8e13597044313dcc6beaa111e61133b1d83cf4a60b1846b278ed396c28fe6f12
+MD5 83da3602b43fb7d050799bbab063636b libgtksourceviewmm-0.3.0-r1.ebuild 941
+RMD160 55c30fc7f75ec9b6dd3e9e1639de446eb387cae1 libgtksourceviewmm-0.3.0-r1.ebuild 941
+SHA256 8e13597044313dcc6beaa111e61133b1d83cf4a60b1846b278ed396c28fe6f12 libgtksourceviewmm-0.3.0-r1.ebuild 941
 EBUILD libgtksourceviewmm-0.3.0.ebuild 895 RMD160 ade37dd24fb315d525043b9de23719da6829dcbc SHA1 69288f839e0df986a58942e5075ac50abb6299a2 SHA256 77d4f48089664a096d399cb961fbcdfed5d92ecc0694a79ae16efc4afe253eef
 MD5 59510b53b1536d484776777b88064f23 libgtksourceviewmm-0.3.0.ebuild 895
 RMD160 ade37dd24fb315d525043b9de23719da6829dcbc libgtksourceviewmm-0.3.0.ebuild 895
 SHA256 77d4f48089664a096d399cb961fbcdfed5d92ecc0694a79ae16efc4afe253eef libgtksourceviewmm-0.3.0.ebuild 895
-MISC ChangeLog 672 RMD160 6238a4aed0b8243bed207229c7e56d7aeca65810 SHA1 b7883ad0d989f42c7b06dcbf10d53193f8ee42d7 SHA256 61e79f1d4d0105c45985e233014fd3185c513e700cc1e7291bb12c61e8dd5bab
-MD5 e001685c9595ce1e2ea080477c3bc8fd ChangeLog 672
-RMD160 6238a4aed0b8243bed207229c7e56d7aeca65810 ChangeLog 672
-SHA256 61e79f1d4d0105c45985e233014fd3185c513e700cc1e7291bb12c61e8dd5bab ChangeLog 672
+MISC ChangeLog 863 RMD160 c598ee148e28ea8b4796df585a7b423855742597 SHA1 29000e1aecc010d295d35d81633b8027e76ccf7b SHA256 3b2056b6f7a179ecf029c7fb265b3badb545d50eed94cd8b0dc92e6ecf2cb0a9
+MD5 5ec9cec1227a63b877d8f23b3a9e0cec ChangeLog 863
+RMD160 c598ee148e28ea8b4796df585a7b423855742597 ChangeLog 863
+SHA256 3b2056b6f7a179ecf029c7fb265b3badb545d50eed94cd8b0dc92e6ecf2cb0a9 ChangeLog 863
 MISC metadata.xml 319 RMD160 727fffe8035fd1fc0ab17e954effae2ddfbe0f23 SHA1 66591b459f72a933bde60ad5d57c10c5ab9816cb SHA256 675c962863a9ea0582f388acd2279b1d85aa98ab0e30b03b5274e9b240b83a16
 MD5 9e8a549f79a8437cbb5d55a0266a976a metadata.xml 319
 RMD160 727fffe8035fd1fc0ab17e954effae2ddfbe0f23 metadata.xml 319
@@ -22,3 +26,6 @@ SHA256 49de4906fb999198aace6bc47e5f4cd4f8bb8c8e1c883f78eb7518a8ea30bb1f files/di
 MD5 0bfea81f25e91478d2bc87664ea5e6a1 files/digest-libgtksourceviewmm-0.3.0 277
 RMD160 44745e01e500d5a808172cae5d649344d10406e2 files/digest-libgtksourceviewmm-0.3.0 277
 SHA256 31939d195f5fdeca2b0909d1b85c71289bf29e87c4a1a870c4d82dfd3655eee1 files/digest-libgtksourceviewmm-0.3.0 277
+MD5 0bfea81f25e91478d2bc87664ea5e6a1 files/digest-libgtksourceviewmm-0.3.0-r1 277
+RMD160 44745e01e500d5a808172cae5d649344d10406e2 files/digest-libgtksourceviewmm-0.3.0-r1 277
+SHA256 31939d195f5fdeca2b0909d1b85c71289bf29e87c4a1a870c4d82dfd3655eee1 files/digest-libgtksourceviewmm-0.3.0-r1 277
