@@ -1,6 +1,12 @@
 # ChangeLog for dev-cpp/libgtksourceviewmm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.3 2007/01/21 17:38:03 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libgtksourceviewmm/Attic/ChangeLog,v 1.4 2007/02/06 23:22:22 remi Exp $
+
+*libgtksourceviewmm-0.3.0-r1 (06 Feb 2007)
+
+  06 Feb 2007; Remi Cardona <remi@gentoo.org>
+  +libgtksourceviewmm-0.3.0-r1.ebuild:
+  fixing configure option for doxygen dep, fixes bug #164327
 
 *libgtksourceviewmm-0.3.0 (21 Jan 2007)
 
